padding and auto dark mode

--- a/index.html
+++ b/index.html
@@ -9,9 +9,15 @@
     body {
       font-family: "Inter", sans-serif
     }
+    @media (prefers-color-scheme: dark) {
+      body{
+        background-color: black;
+        color:white
+      }
+    }
   </style>
 </head>
 
 <body>
-  <h1>Bogdan Khamidullin's page</h1>
+  <h1 style="padding: 1em">Bogdan Khamidullin</h1>
 </body>
