--- a/index.html
+++ b/index.html
@@ -1,23 +1,55 @@
 <head>
-  
-  <meta charset="utf-8">
-  <link rel="preconnect" href="https://fonts.googleapis.com">
-  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-  <link href="https://fonts.googleapis.com/css2?family=Inter:ital,opsz,wght@0,14..32,100..900;1,14..32,100..900&family=Montserrat:ital,wght@0,100..900;1,100..900&display=swap" rel="stylesheet">
-  
+  <meta charset="utf-8" />
+  <link rel="preconnect" href="https://fonts.googleapis.com" />
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+  <link
+    href="https://fonts.googleapis.com/css2?family=Inter:ital,opsz,wght@0,14..32,100..900;1,14..32,100..900&family=Montserrat:ital,wght@0,100..900;1,100..900&display=swap"
+    rel="stylesheet"
+  />
+
   <style>
     body {
-      font-family: "Inter", sans-serif
+      font-family: "Inter", sans-serif;
+      padding: 1em;
     }
+    @media (min-width: 700px) {
+      body {
+        font-size: 1.5rem;
+      }
+    }
+    a {
+      text-decoration-thickness: 0.01em;
+      text-underline-offset: 0.15em;
+      color: rgb(20, 104, 249);
+    }
+    .link-group * {
+      margin-right: 0.5rem;
+    }
+    .link-group {
+      margin-bottom: 2rem;
+    }
+
     @media (prefers-color-scheme: dark) {
-      body{
+      body {
         background-color: black;
-        color:white
+        color: white;
+      }
+      a {
+        color: rgb(127, 172, 250);
       }
     }
   </style>
 </head>
 
 <body>
-  <h1 style="padding: 1em">Bogdan Khamidullin</h1>
+  <h1>Bogdan Khamidullin</h1>
+  <div class="link-group">
+    <span>Photography:</span>
+    <a href="https://unsplash.com/@khambogrus">Unsplash</a>
+    <a href="https://www.instagram.com/khambogrus/">Instagram</a>
+    <a href="https://t.me/bogomdanphotos">Telegram Channel</a>
+  </div>
+  <div>
+    <a href="mailto:bogdankhamidullin@gmail.com">bogdankhamidullin@gmail.com</a>
+  </div>
 </body>
