--- a/index.html
+++ b/index.html
@@ -20,6 +20,7 @@
     a {
       text-decoration-thickness: 0.01em;
       text-underline-offset: 0.15em;
+      text-decoration-skip: none;
       color: rgb(20, 104, 249);
     }
     .link-group * {
